--- a/src/index.css
+++ b/src/index.css
@@ -77,16 +77,17 @@ input {
   height: 165px;
   overflow: hidden;
   margin-bottom: 15px;
+  box-shadow: 7px 7px 5px 5px;
 }
 
 .photo-container ul img {
   width: 100%;
-  transform: scale(1.25);
-  transition: transform 1.25s;
 }
 
-.photo-container li:hover img {
-  transform: scale(1.65);
+.photo-container li:hover {
+  transform: scale(1.2);
+  transition: transform 1s;
+  box-shadow: 0px;
 }
 
 .photo-container .not-found {
